# robotiq_3f_description

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  package.xml  spheres.txt
launch/: display.launch
meshes/collision/: AGS_finger-base.stl  AGS_finger-dist.stl  AGS_finger-med.stl  AGS_finger-prox.stl  AGS_wrist.stl
meshes/visual/: AGS_finger-base.stl  AGS_finger-dist.step  AGS_finger-med.stl  AGS_finger-prox.stl  AGS_palm.dae  AGS_wrist.dae  AGS_wrist.stl
meshes/visual_in_mm/: AGS_finger-base.dae  AGS_finger-base.step  AGS_finger-dist.dae  AGS_finger-med.dae  AGS_finger-prox.dae  AGS_wrist.dae  AGS_wrist.step
robotiq_3f_description/config/: part_poses.yaml
robotiq_3f_description/meshes/assembled/: .gitkeep  robotiq_3f_collision.ply
robotiq_3f_description/meshes/collision/: AGS_palm.stl
robotiq_3f_description/meshes/visual/: AGS_finger-base.dae  AGS_finger-dist.dae  AGS_finger-dist.stl  AGS_finger-med.dae  AGS_finger-med.step  AGS_finger-prox.dae  AGS_palm.stl
robotiq_3f_description/meshes/visual_in_mm/: AGS_finger-prox.step  AGS_palm.dae
robotiq_3f_description/urdf/: robotiq_3f_gripper.urdf  robotiq_3f_gripper_abs_paths.urdf
scripts/: calculate_finger_angles.py  create_ply_from_parts.py  create_urdf_from_parts.py  create_xacro_from_parts.py  gripper_spheres_solo_finger.py
urdf/: robotiq_3f_gripper.urdf.xacro  robotiq_3f_gripper_macro.xacro
